--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.6",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
